--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
   },
+  "homepage": "https://KrisztinaSamu.github.io/react_memory-game",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
